--- a/style.css
+++ b/style.css
@@ -1,16 +1,94 @@
+
+body {
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: rgb(247, 247, 247); 
+    color: rgb(85, 185, 185);
+  }
+  
+  h1 {
+    font-weight: 100;
+  }
+
+
+
+
 .grid {
-    width:400px;
-    height: 400px;
+    width:500px;
+    height: 500px;
     display: flex;
     flex-wrap: wrap;
+    align-items: center ;
+    justify-content: space-evenly;
     background-color: aquamarine;
+    column-gap: 5px;
+    row-gap: 5px;
+    text-align: center;
+    margin-top: 20px; 
+    
 }
 
 .grid div {
     width : 100px;
-    height : 100px;
-    background-color: blueviolet; 
+    height : 100px; 
     font-size: 50px;
     text-align: center;
     font-weight: bold;
+    background: #bbada0;
+    border-radius: 10px;
+    position: relative;
+    
+    
+    
+    
+
+
 }
+
+
+
+/*.game-container {
+  margin-top: 40px;
+  position: relative;
+  padding: 15px;
+  cursor: default;
+  -webkit-touch-callout: none;
+  -ms-touch-callout: none;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  -ms-touch-action: none;
+  touch-action: none;
+  background: #bbada0;
+  border-radius: 6px;
+  width: 500px;
+  height: 500px;
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+
+  column-gap: 10px;
+    border: 2px solid black;
+
+
+
+
+     width: 100%;
+ height: 100%;
+ position: absolute;
+ top: 0;
+ bottom: 0;
+ right: 0;
+ left: 0;
+ margin: auto;
+ &_cell {
+  display: inline-block;
+  height: 25%;
+  width: 25%;
+  padding: $grid-padding;
+  float: left;
+  background: rgba(238, 228, 218, 0.35);
+  background-clip: content-box;
+}*/ 
