--- a/style.css
+++ b/style.css
@@ -4,12 +4,15 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: rgb(247, 247, 247); 
-    color: rgb(85, 185, 185);
+    /*background-color: rgb(247, 247, 247); */
+    background: radial-gradient(circle, rgba(245,216,228,1) 0%, rgba(148,187,233,1) 100%);
+    color: rgb(2, 27, 27);
   }
   
   h1 {
     font-weight: 100;
+    font-size: 80px;
+    font-weight: bold; 
   }
 
 
@@ -34,17 +37,29 @@ body {
     width : 100px;
     height : 100px; 
     font-size: 50px;
-    text-align: center;
+    border: 2px solid white ;
+
     font-weight: bold;
-    background: #bbada0;
-    border-radius: 10px;
+    /*background-color: #bbada0;*/
+    border-radius: 5px;
     position: relative;
-    
-    
-    
-    
 
+}
 
+.colorZero {
+  background-color:rgb(85, 185, 185);
+}
+
+.colorTwo {
+  background-color: rgb(185, 61, 61);
+}
+
+.colorFour{
+  background-color: rgb(255, 255, 255);
+}
+
+.color8{
+  background-color: rgb(80,20,40)
 }
 
 
